--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mongodb_s3_backup",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A tool to help backup your mongodb databases to s3.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "https://github.com/theycallmeswift/node-mongodb-s3-backup.git",
   "keywords": [
     "Mongodb",
     "S3",
