--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb_s3_backup",
-  "version": "0.0.4",
+  "version": "0.0.4-1",
   "description": "A tool to help backup your mongodb databases to s3.",
   "main": "index.js",
   "bin": {
