Make cron configurable by user and add a backup now option
Closes #1
Closes #2

Update index.js

added destination (folder) support

Update README.md

updated readme to include destination

stict mode,
added timestamp to filename

add timestamp to uploaded file
enable strict mode
v bump

add callback to sync function

exit process on successful callback

fix -n callback

have binary script return non-zero status on failure

fix bug in cron.timezone parsing

Remove hard dependency on `time` module, but state that its installation is necessary for use of optional "timezone" specification.

Cleaned things up

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cli-color": "~0.2.1",
     "async": "~0.1.22",
     "cron": "~1.0.1",
-    "time": "~0.8.3"
+    "time": "0.9.2"
   },
   "engines": {
     "node": ">=0.8"
