--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "knox": "~0.4.0",
     "cli-color": "~0.2.1",
     "async": "~0.1.22",
-    "cron": "~1.0.1",
-    "time": "~0.8.3"
+    "cron": "~1.0.1"
   },
   "engines": {
     "node": ">=0.8"
