--- a/config.sample.json
+++ b/config.sample.json
@@ -13,8 +13,7 @@
     "destination": "/"
   },
   "cron": {
-    "time": "00:00",
-    "timezone": "America/New_York"
+    "time": "00:00"
   }
 }
 
