--- a/config.sample.json
+++ b/config.sample.json
@@ -11,7 +11,8 @@
     "secret": "your_s3_secret",
     "bucket": "s3_bucket_to_upload_to",
     "destination": "/",
-    "encrypt": true
+    "encrypt": true,
+    "region": "s3_region_to_use"
   },
   "cron": {
     "time": "00:00"
